--- a/roles/devenv/tests/test.yml
+++ b/roles/devenv/tests/test.yml
@@ -1,6 +1,7 @@
 ---
 - hosts: localhost
-  remote_user: root
+  connection: local
+  become: true
   roles:
-    - devenv
+    - role: devenv
       user: dev
