optimize update_cache

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,12 +9,17 @@
         "DISTRIB",
         "dpkg",
         "flatpak",
+        "getpostman",
+        "keypair",
         "keyrings",
         "lineinfile",
         "neovim",
+        "paramiko",
+        "phabricator",
         "proto",
         "redir",
         "shellrc",
+        "sirclo",
         "subelements",
         "zplug"
     ]
