--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,7 @@
         "DISTRIB",
         "dpkg",
         "flatpak",
+        "gcloud",
         "getpostman",
         "keypair",
         "keyrings",
