--- a/roles/devenv/tasks/main.yml
+++ b/roles/devenv/tasks/main.yml
@@ -4,6 +4,9 @@
   apt:
     update_cache: true
 
+- name: add nerd fonts
+  import_tasks: nerd-fonts.yml
+
 - name: setup zsh
   import_tasks: setup-zsh.yml
   when: shell == '/usr/bin/zsh'
