--- a/roles/devenv/tasks/main.yml
+++ b/roles/devenv/tasks/main.yml
@@ -38,3 +38,6 @@
 - name: setup gcloud cli
   import_tasks: setup-gcloud-cli.yml
   when: use_gcloud_cli
+
+- name: setup xdm
+  import_tasks: setup-xdm.yml
