--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
         "buildx",
         "containerd",
         "coreutils",
+        "devenv",
         "DISTRIB",
         "dpkg",
         "flatpak",
