--- a/roles/devenv/meta/main.yml
+++ b/roles/devenv/meta/main.yml
@@ -3,12 +3,12 @@ galaxy_info:
   description: development environment 
   license: MIT
 
-  min_ansible_version: 2.1
+  min_ansible_version: "2.1"
   
   platforms:
-    - name: Linux Mint
-      versions: 
-        - ^21
+    - name: Ubuntu
+      versions:
+        - jammy
   
   galaxy_tags: []
 
