--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,7 +9,9 @@
         "devenv",
         "DISTRIB",
         "dpkg",
+        "flathub",
         "flatpak",
+        "flatpakrepo",
         "gcloud",
         "getpostman",
         "jetbrains",
