--- a/roles/devenv/tasks/settings/ssh.yml
+++ b/roles/devenv/tasks/settings/ssh.yml
@@ -1,7 +1,7 @@
 ---
 # https://docs.ansible.com/ansible/latest/collections/community/general/ssh_config_module.html
 - name: setup ssh
-  become: false
+  become: is_root
   vars:
     dir: ~/.ssh
     configs:
