--- a/roles/devenv/tasks/softwares/_flatpak.yml
+++ b/roles/devenv/tasks/softwares/_flatpak.yml
@@ -3,7 +3,7 @@
 # https://flathub.org/
 
 - name: setup flatpak
-  become: false
+  become: is_root
   vars:
     autostart_dir: $HOME/.config/autostart
   block:
