fix flatpak add repo

--- a/roles/devenv/tasks/softwares/_flatpak.yml
+++ b/roles/devenv/tasks/softwares/_flatpak.yml
@@ -18,7 +18,7 @@
       - name: flatpak add https://flathub.org/
         community.general.flatpak_remote: 
           name: flathub
-          flatpakrepo_url: flathub https://flathub.org/repo/flathub.flatpakrepo
+          flatpakrepo_url: https://flathub.org/repo/flathub.flatpakrepo
           state: present
 
   - name: flatpak install apps
