--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,11 +14,7 @@ jobs:
         uses: actions/checkout@v3
       
       - name: Install Ansible
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y software-properties-common
-          sudo apt-add-repository --yes --update ppa:ansible/ansible
-          sudo apt-get install -y ansible
+        run: make install-ansible
       
       - name: Install Requirements
         run: make install-requirements
@@ -26,4 +22,5 @@ jobs:
       - name: Run
         env:
           ANSIBLE_HOST_KEY_CHECKING: False
-        run: ansible-playbook -i "localhost," playbook-root.test.yml -u root
+          USER: root
+        run: ansible-playbook -i "localhost," playbook.yml -u root
