--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,4 +22,4 @@ jobs:
       - name: Run
         env:
           ANSIBLE_HOST_KEY_CHECKING: False
-        run: ansible-playbook -i "localhost," playbook.yml --extra-vars="dev_user=root" -u root -vvv
+        run: ansible-playbook -i "localhost," playbook.yml --extra-vars="dev_user=root" -u root
