--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,6 +14,7 @@
         "flatpakrepo",
         "gcloud",
         "getpostman",
+        "gomigrate",
         "jetbrains",
         "keypair",
         "keyrings",
