--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,6 +32,5 @@ jobs:
           max_attempts: 3
           retry_on: error
           timeout_seconds: 5
-          command: |
-            ANSIBLE_HOST_KEY_CHECKING=false ansible-playbook -i "localhost," playbook.yml --extra-vars="dev_user=root" -u root
+          command: ansible-playbook -i "localhost," playbook.yml --extra-vars="dev_user=root" -u root
            
