softwares add distrobox

--- a/roles/devenv/tasks/softwares/_main.yml
+++ b/roles/devenv/tasks/softwares/_main.yml
@@ -8,6 +8,7 @@
     - _flatpak.yml
     - arcanist.yml
     - asdf.yml
+    - distrobox.yml
     - docker.yml
     - gcloud-cli.yml
     - mockoon.yml
