--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,7 @@
         "coreutils",
         "devenv",
         "DISTRIB",
+        "distrobox",
         "dpkg",
         "flathub",
         "flatpak",
