add systemd services

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -22,10 +22,12 @@
         "lineinfile",
         "mockoon",
         "neovim",
+        "oneshot",
         "paramiko",
         "phabricator",
         "proto",
         "redir",
+        "rfkill",
         "shellrc",
         "sirclo",
         "subelements",
