--- a/roles/devenv/tasks/softwares/gcloud-cli.yml
+++ b/roles/devenv/tasks/softwares/gcloud-cli.yml
@@ -45,5 +45,6 @@
         apt:
           name: 
             - google-cloud-cli
+            - google-cloud-sdk-gke-gcloud-auth-plugin
             - kubectl
           state: latest
