add non-gui and wsl case

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,7 @@
         "coreutils",
         "devenv",
         "DISTRIB",
+        "distro",
         "distrobox",
         "dpkg",
         "flathub",
