--- a/roles/devenv/tasks/softwares/vscode.yml
+++ b/roles/devenv/tasks/softwares/vscode.yml
@@ -3,6 +3,7 @@
 
 - name: setup vscode
   become: true
+  when: use_gui_apps
   vars:
     apt_key_path: /etc/apt/keyrings/packages.microsoft.asc
   block:
