--- a/roles/devenv/tasks/softwares/xdm.yml
+++ b/roles/devenv/tasks/softwares/xdm.yml
@@ -1,6 +1,7 @@
 ---
 - name: setup xdm
   become: "{{ is_root }}"
+  when: use_gui_apps
   vars:
     tmp_dir: $HOME/tmp/xdm
     installed_path: /opt/xdman
