--- a/roles/devenv/tasks/softwares/_flatpak.yml
+++ b/roles/devenv/tasks/softwares/_flatpak.yml
@@ -31,6 +31,7 @@
         - nz.mega.MEGAsync
         - com.mongodb.Compass
         - com.redis.RedisInsight
+        - md.obsidian.Obsidian
       state: present
 
   - name: flatpak ensure config dir
