--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,7 +17,10 @@
         "flatpakrepo",
         "gcloud",
         "getpostman",
+        "goimports",
+        "golangci",
         "gomigrate",
+        "hypnoglow",
         "jetbrains",
         "keypair",
         "keyrings",
@@ -29,6 +32,7 @@
         "phabricator",
         "proto",
         "redir",
+        "reshim",
         "rfkill",
         "shellrc",
         "sirclo",
