--- a/roles/devenv/tasks/softwares/asdf.yml
+++ b/roles/devenv/tasks/softwares/asdf.yml
@@ -19,6 +19,8 @@
         global: latest
         extra_commands: 
           - go install github.com/golang/mock/mockgen@v1.6.0
+          - go install golang.org/x/tools/cmd/goimports@latest
+          - asdf reshim golang
       - name: rust
         repo: https://github.com/code-lever/asdf-rust.git
         versions:
@@ -27,6 +29,12 @@
         extra_commands: []
       - name: gomigrate
         repo: https://github.com/joschi/asdf-gomigrate
+        versions:
+          - latest
+        global: latest
+        extra_commands: []
+      - name: golangci-lint
+        repo: https://github.com/hypnoglow/asdf-golangci-lint
         versions:
           - latest
         global: latest
